feat: 新增取消订单接口
- 新增 /api/movieOrder/cancel 接口
- 支持用户取消已创建的订单
- 添加 CancelOrderQuery 查询类
- 修复订单详情接口的座位信息为null问题
- 优化订单列表查询，避免重复数据